# TradingEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  setup.sh  setup_sql.sh  test.sh
src/: Builder_Dispatch.cpp  Builder_FIX.cpp  Builder_OUCH.cpp  Builder_OUCH_BIST.cpp  Builder_OUCH_NASDAQ.cpp  CMakeLists.txt  DBStore.cpp  ErrorHandler.cpp  FIXParser.cpp  HashTables.cpp  ITCHParser.cpp  Limits.cpp  Logger.cpp  LoginController.cpp  MarketBook.cpp  MarketDataHandler.cpp  MessagePool.cpp  MulticastReceiver.cpp  NetworkIO.cpp  Parser_Dispatch.cpp  Parser_FIX.cpp  Parser_ITCH.cpp  Parser_ITCH_BIST.cpp  Parser_ITCH_NASDAQ.cpp  Parser_OUCH_BIST.cpp  Parser_OUCH_NASDAQ.cpp  Parser_SBE.cpp  Receiver.cpp  Risk.cpp  RiskEngine.cpp  SBEParser.cpp  Sequence_FIX.cpp  Sequence_SBT.cpp  SessionManager.cpp  Session_FIX.cpp  SoupBinTcp.cpp  Store_DB.cpp  Store_RAM.cpp  TradingEngine.cpp  TradingEngine.h  (+2 more)
src/core/: CMakeLists.txt  HashTables.cpp  HashTables.h  MessagePool.h  MessageWithVenue.h  Order.h  Protocol-Venue.h
src/database/: CMakeLists.txt  ClickhouseWriter.h  ClickhousseWriter.cpp  DbTypes.h
src/database/tables/: itchtable.sql  setup_sql.sh
src/flows/: BuilderFlow.cpp  BuilderFlow.h  CMakeLists.txt  NetworkFlow.cpp  NetworkFlow.h  OrderFlow.cpp  OrderFlow.h  ParserFlow.cpp  ParserFlow.h  RiskFlow.cpp  RiskFlow.h  StrategyFlow.cpp  StrategyFlow.h
src/market/: CMakeLists.txt  MarketBook.cpp  MarketBook.h
src/network/: CMakeLists.txt  NetworkIO.cpp  NetworkIO.h  NetworkPackets.h  NetworkPendingQueue.h
src/order_management/: CMakeLists.txt  OrderManager.cpp  OrderManager.h
src/order_management/fillers/: CMakeLists.txt  FillerFIX.cpp  FillerFIX.h  FillerITCH_BIST.cpp  FillerITCH_BIST.h  FillerITCH_NASDAQ.cpp  FillerITCH_NASDAQ.h  FillerOUCH_BIST.cpp  FillerOUCH_BIST.h  FillerOUCH_NASDAQ.cpp  FillerOUCH_NASDAQ.h
src/protocol/: Builder_Dispatch.cpp  Builder_Dispatch.h  CMakeLists.txt  Parser_Dispatch.cpp  Parser_Dispatch.h
src/protocol/builders/FIX/: Builder_FIX.cpp  Builder_FIX.h  CMakeLists.txt
src/protocol/builders/OUCH/: Builder_OUCH_BIST.cpp  Builder_OUCH_BIST.h  Builder_OUCH_NASDAQ.cpp  Builder_OUCH_NASDAQ.h  CMakeLists.txt
src/protocol/parsers/FIX/: CMakeLists.txt  Parser_FIX.cpp  Parser_FIX.h
src/protocol/parsers/ITCH/: CMakeLists.txt  Parser_ITCH_BIST.cpp  Parser_ITCH_BIST.h  Parser_ITCH_NASDAQ.cpp  Parser_ITCH_NASDAQ.h
src/protocol/parsers/OUCH/: CMakeLists.txt  Parser_OUCH_BIST.cpp  Parser_OUCH_BIST.h  Parser_OUCH_NASDAQ.cpp  Parser_OUCH_NASDAQ.h
src/protocol/types/FIX/: CMakeLists.txt  FIXMessage.h
src/protocol/types/ITCH/: CMakeLists.txt  ITCHTypes_BIST.h  ITCHTypes_NASDAQ.h
src/protocol/types/OUCH/: CMakeLists.txt  OUCHTypes_BIST.h  OUCHTypes_NASDAQ.h
src/risk/: CMakeLists.txt  Limits.cpp  Limits.h  RiskEngine.cpp  RiskEngine.h
src/session/: CMakeLists.txt  LoginController.cpp  LoginController.h  Sequence_FIX.h  Sequence_SBT.h  SessionManager.cpp  SessionManager.h  SoupBinTcp.cpp  SoupBinTcp.h  sess.main.cpp
src/strategy/: CMakeLists.txt
src/utils/: CMakeLists.txt  Endian.h  ErrorHandler.cpp  ErrorHandler.h  Logger.cpp  Logger.h  common.h  config_utils.cpp  config_utils.h
src/utils/CustomMap/: CMakeLists.txt  ConcurrentFixedFlatMap.h  allocator.h  slot.h
test/: CMakeLists.txt
test/benchmark/: CMakeLists.txt  bench_utils.h
test/benchmark/FIX/: CMakeLists.txt  parser_fix_bench.cpp  parser_fix_dispatch_bench.cpp
test/benchmark/builder/: CMakeLists.txt  builder_dispatch_bench.cpp
test/benchmark/builder/FIX/: CMakeLists.txt  builder_fix_bench.cpp
test/benchmark/builder/OUCH/: CMakeLists.txt  builder_ouch_bist_bench.cpp  builder_ouch_nasdaq_bench.cpp
test/benchmark/order_manager/: CMakeLists.txt  order_manager_bench.cpp
test/benchmark/order_manager/FIX/: CMakeLists.txt  order_manager_fix_bench.cpp  order_manager_fix_single_bench.cpp
test/benchmark/order_manager/ITCH/: CMakeLists.txt  order_manager_itch_bist_bench.cpp  order_manager_itch_bist_single_bench.cpp  order_manager_itch_nasdaq_bench.cpp  order_manager_itch_nasdaq_single_bench.cpp
test/benchmark/order_manager/OUCH/: CMakeLists.txt  order_manager_ouch_bist_bench.cpp  order_manager_ouch_bist_single_bench.cpp  order_manager_ouch_nasdaq_bench.cpp  order_manager_ouch_nasdaq_single_bench.cpp
test/benchmark/parser/: CMakeLists.txt  parser_dispatch_bench.cpp
test/benchmark/parser/FIX/: CMakeLists.txt  parser_fix_bench.cpp  parser_fix_nextFixMsgFunc_bench.cpp  parser_fix_parseFunc_bench.cpp
test/benchmark/parser/ITCH/: CMakeLists.txt  parser_itch_bist_bench.cpp  parser_itch_bist_parseFunc_bench.cpp  parser_itch_nasdaq_bench.cpp  (+1 more)
test/benchmark/risk/: CMakeLists.txt  risk_bench.cpp
test/data/: CMakeLists.txt  dataset.cpp  dataset.h  dataset_builder.h  dataset_network.h  dataset_order_manager.h  dataset_parser.h  dataset_risk.h
test/perf/: CMakeLists.txt  perf_utils.h
test/perf/FIX/: CMakeLists.txt  parser_fix_perf.cpp
test/perf/builder/: CMakeLists.txt  builder_dispatch_perf.cpp
test/perf/order_manager/: CMakeLists.txt  order_manager_perf.cpp
test/perf/parser/: CMakeLists.txt  parser_dispatch_perf.cpp
test/perf/risk/: CMakeLists.txt  risk_check_perf.cpp  risk_update_perf.cpp
test/pipeline/: CMakeLists.txt
test/pipeline/benchmark/: CMakeLists.txt  engine_Rx_bench.cpp  engine_Tx_bench.cpp  engine_incoming_bench.cpp  engine_outgoing_bench.cpp
test/pipeline/perf/: CMakeLists.txt  engine_RxTx_perf.cpp  engine_Rx_perf.cpp  engine_Tx_perf.cpp
test/unit/: CMakeLists.txt
test/unit/FIX/: CMakeLists.txt  parser_fix_1pkt_1msg_unit.cpp  parser_fix_npkt_nmsg_unit.cpp
test/unit/ITCH/: parser_itch_bist_unit.cpp  parser_itch_nasdaq_unit.cpp
test/unit/OUCH/: CMakeLists.txt  parser_ouch_bist_1pkt_1msg_unit.cpp  parser_ouch_npkt_nmsg_unit.cpp
test/unit/builder/: CMakeLists.txt  builder_dispatch_unit.cpp
test/unit/network/: CMakeLists.txt  network_unit.cpp
test/unit/order_manager/: CMakeLists.txt  order_manager_unit.cpp
test/unit/parser/: CMakeLists.txt  parser_dispatch_unit.cpp
test/unit/risk/: CMakeLists.txt  risk_unit.cpp
(+200 files in other folders)
